진우 - application.properties 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,36 @@
 spring.application.name=coffeeShop
+
+#server port
+server.port = 8081
+
+# secretKey Environment Variable Setting
+jwt.secret = MqtwRc/zxB4qiXFQeXR/SCHZLRIHS9GYyB+SQFvj4Uk=
+
+# DB Driver, path, account, pw
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://localhost:3306/coffee_shop
+spring.datasource.username=test
+spring.datasource.password=1234
+
+# DB Setting | create, update, delete
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+# File upload Setting
+
+# File Upload Max Size Setting
+spring.servlet.multipart.max-file-size=10MB 
+
+# Many File upload Max Size limit
+spring.servlet.multipart.max-request-size=30MB
+
+# Save Upload File Path
+com.korea.shop.upload.path=upload
+
+spring.jackson.serialization.fail-on-empty-beans=false
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+spring.jackson.mapper.accept_case_insensitive_properties=true
+
+logging.level.org.springframework.security.web=trace
