--- a/build.gradle
+++ b/build.gradle
@@ -28,10 +28,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'	// 마리아DB 드라이버
+
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation 'org.modelmapper:modelmapper:3.2.0' // ModelMapper 추가 : DTO <-> 엔티티
+
+	implementation 'net.coobird:thumbnailator:0.4.20' // 이미지 썸네일
 }
 
 tasks.named('test') {
