--- a/build.gradle
+++ b/build.gradle
@@ -43,9 +43,8 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.11.0'
 
 	// JWT API를 사용하기 위한 라이브러리 - JWT 생성을 위함
-	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
-	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+	implementation 'io.jsonwebtoken:jjwt:0.12.6'
 
 	// 이미지 썸네일
 	implementation 'net.coobird:thumbnailator:0.4.20'
