원두, 장바구니 코딩 작업 4일차 커밋 1 - 나영일 Cart 컨트롤러까지 작성 (테스트 미완료)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=30MB
 
 # Save Upload File Path
-com.korea.shop.upload.path=upload
+com.teamproject.coffeeShop.path=upload
 
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
